--- a/release/wkTTS.ini
+++ b/release/wkTTS.ini
@@ -3,25 +3,20 @@ EnableModule=1
 UseDebugPrint=0
 
 [TTS]
-Enable=0
 Volume=100
+StartEnabled=0
 ReadPlayerName=0
 ReadPlayerChat=1
 ReadSystemMessages=0
-; First uncommented voice is used for system messages
+; First voice is used for system messages
 Voice0=User/Voices/cmu_us_aew.flitevox
 Voice1=User/Voices/cmu_us_ahw.flitevox
 Voice2=User/Voices/cmu_us_aup.flitevox
 Voice3=User/Voices/cmu_us_awb.flitevox
-;Voice4=User/Voices/cmu_us_axb.flitevox
-Voice5=User/Voices/cmu_us_bdl.flitevox
-;Voice6=User/Voices/cmu_us_clb.flitevox
-Voice7=User/Voices/cmu_us_eey.flitevox
-Voice8=User/Voices/cmu_us_fem.flitevox
-Voice9=User/Voices/cmu_us_gka.flitevox
-;Voice10=User/Voices/cmu_us_jmk.flitevox
-Voice11=User/Voices/cmu_us_ksp.flitevox
-Voice12=User/Voices/cmu_us_ljm.flitevox
-Voice13=User/Voices/cmu_us_rms.flitevox
-;Voice14=User/Voices/cmu_us_rxr.flitevox
-;Voice15=User/Voices/cmu_us_slt.flitevox
+Voice4=User/Voices/cmu_us_bdl.flitevox
+Voice5=User/Voices/cmu_us_eey.flitevox
+Voice6=User/Voices/cmu_us_fem.flitevox
+Voice7=User/Voices/cmu_us_gka.flitevox
+Voice8=User/Voices/cmu_us_ksp.flitevox
+Voice9=User/Voices/cmu_us_ljm.flitevox
+Voice10=User/Voices/cmu_us_rms.flitevox
